--- a/web-doanit/src/component/teacher/createUpdateTeacher.css
+++ b/web-doanit/src/component/teacher/createUpdateTeacher.css
@@ -25,30 +25,12 @@ label{
 }
 h2{
     text-align: center;
+    color: #87AA74;
 }
 
-.form-control-file::file-selector-button {
-    padding: 6px 12px;
-    font-size: 14px;
-    background-color: white;
-    border: 1px solid #007bff;
-    border-radius: 4px;
-    cursor: pointer;
-    height: 35px;
-    color: #007bff;
-}
 
-.form-control-file::file-selector-button:hover {
-    background-color: #007bff;
-    color: white;
-}
 
-.form-control-file {
-    border: none;
-    padding: 0;
-    outline: none;
-    background: none;
-}
+
 
 h2{
 
@@ -74,16 +56,21 @@ h2{
     z-index: -1;
 }
 
-.label-custom{
+.label-custom {
     border: 1px solid #007bff;
     width: 90px;
     height: 38px;
     border-radius: 5px;
-    padding-top: 7px;
     font-weight: normal;
     color: #007bff;
     transition: background-color 0.3s, color 0.3s;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .label-custom:hover {
@@ -97,3 +84,33 @@ h2{
 sup{
     color: red;
 }
+
+
+.label-input {
+    margin-bottom: 10px;
+}
+
+.label-input-a{
+    margin-bottom: 10px;
+    margin-top: 15px;
+
+}
+
+.the-h2{
+    color: #87AA74;
+}
+
+.label-b{
+    margin-top: 8px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+
+
+
+
+
+
